--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
+    "axios": "^1.2.1",
     "element-plus": "^2.2.18",
     "sass": "^1.55.0",
     "vue": "^3.2.37",
